external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_mut.exp
error[E02010]: invalid name
   ┌─ tests/move_2024/matching/invalid_mut.move:10:13
   │
10 │             mut Maybe::Nothing => (),
   │             ^^^ -------------- This refers to a variant, not a variable binding
   │             │    
   │             'mut' can only be used with variable bindings in patterns

error[E02010]: invalid name
   ┌─ tests/move_2024/matching/invalid_mut.move:11:17
   │
11 │             mut x<u64> => (),
   │                 ^ Invalid type arguments on a pattern variable
   │
   = Type arguments cannot appear on pattern variables

warning[W09002]: unused variable
   ┌─ tests/move_2024/matching/invalid_mut.move:11:17
   │
11 │             mut x<u64> => (),
   │                 ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'
   │
   = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ tests/move_2024/matching/invalid_mut.move:12:13
   │
12 │             mut Maybe::Just<u64>(_) => (),
   │             ^^^ Invalid 'mut' keyword on non-variable pattern

error[E03018]: invalid type parameter
   ┌─ tests/move_2024/matching/invalid_mut.move:12:28
   │
12 │             mut Maybe::Just<u64>(_) => (),
   │                            ^^^^^ Cannot use type parameters on an enum variant

